Updates from Lesson 3, still have to add info on Merges

--- a/Git_and_Github.ipynb
+++ b/Git_and_Github.ipynb
@@ -90,7 +90,8 @@
     " - *Git checkout:* This is used to reset all files to the time the chosen commit was made. This is useful if a bug was found and you're not sure which commit introduced it.\n",
     " - *Staging area:* There are 3 areas when working with Git, the Working Directory(where you're currently working and the all the files in this directory), which goes to the Staging Area(intermediate area where files may be added one at a time and then when commit is run it will only commit the files in this area) which leads to the Repository(where the files from the staging area are committed). The command \"git status\" can be used to check current files in working directory(under \"Untracked files\") and to check which files are in the staging area(under \"Changes to be committed\"). The main/original/offical version of the code is referred to as the Master branch, other versions have their own branch names that are not Master. The Master branch is created automatically every time a new repository is created and it acts as the current branch being worked on upon creation.\n",
     " - *Branches:* Good to use with different/experimental versions of the official(Master) branch version. Can checkout other branches not created by yourself, the message: \"Branch branch_name set up to track remote branch branch_name from origin.\" This just means that you didn't create this branch yourself since this is a \"remote\" branch.\n",
-    " - *Git Merge:* git merge will also include the currently checked-out branch in the merged version. So if you have branch_name1 checked out, and you run: git merge branch_name2 branch_name3, the merged version will combine branch_name1,branch_name2, and branch_name3(that’s because the branch_name1 label will update after you make the merge commit). For this reason, you should always checkout one of the two branches you’re planning on merging before doing the merge.If you want to merge branch_name2 into branch_name1, you can simply: git checkout branch_name1 ,then: git merge branch_name2."
+    " - *Git Merge:* git merge will also include the currently checked-out branch in the merged version. So if you have branch_name1 checked out, and you run: git merge branch_name2 branch_name3, the merged version will combine branch_name1,branch_name2, and branch_name3(that’s because the branch_name1 label will update after you make the merge commit). For this reason, you should always checkout one of the two branches you’re planning on merging before doing the merge.If you want to merge branch_name2 into branch_name1, you can simply: git checkout branch_name1 ,then: git merge branch_name2.\n",
+    " - *Forking:* Can only be done on Github. Makes a copy of someone else's repository on your Github profile which can now be cloned and modified on your system. No need to set up a remote here since one is automatically set up when one is cloned."
    ]
   },
   {
@@ -126,9 +127,12 @@
     "18. Create & switch to new branch: got checkout -b branch_name\n",
     "19. Check a commits parent: git show commit_id (useful after merging branches)\n",
     "20. Delete a branch: git branch -d branch_name(only deletes branch label, not commits from it)\n",
-    "21. Create a remote(repository): git remote add origin URL_of_github_link (standard name for 1 remote is origin)\n",
+    "21. Create a remote(repository): git remote add origin URL_of_github_link (standard name for 1 remote is origin, the name origin is the name used within the local repository to refer to the remote repository on Github)\n",
     "22. Check remotes: got remote -v (check remotes created and shows URL where data is fetched/pushed, these will be the same in most cases)\n",
-    "23. Send changes to remote: git push origin master"
+    "23. Send changes to remote: git push origin master (master is the branch being pushed from local to remote)\n",
+    "24. Pull/Grab changes from remote: git pull origin master (master is the branch being pulled from the remote)\n",
+    "25. Update only local copy of remote branch: git fetch origin (leaves actual local version alone, this is good when different changes have been made to the remote and local copy of the remote branches)\n",
+    "26. Merge remote and local copy of remote: git merge master origin/master (a conflict is expected from this to be checked)"
    ]
   },
   {
@@ -164,9 +168,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " - Githubs: https://github.com/github/training-kit/blob/master/downloads/github-git-cheat-sheet.pdf\n",
-    " - Diagrams: https://www.gliffy.com/, https://yuml.me/diagram/activity/draw\n",
-    " - "
+    " - Github Cheetsheet: https://github.com/github/training-kit/blob/master/downloads/github-git-cheat-sheet.pdf\n",
+    " - Diagram Tools: https://www.gliffy.com/, https://yuml.me/diagram/activity/draw\n",
+    " - BitBucket: https://bitbucket.org/product, https://confluence.atlassian.com/bitbucket/tutorials-755338051.html (a Git hosting service that gives you unlimited private repositories for free!)"
    ]
   },
   {
@@ -179,14 +183,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Udacity**\n",
+    " - Version Control with Git: https://classroom.udacity.com/courses/ud123\n",
+    " - How to Use Git and Github: https://classroom.udacity.com/courses/ud775\n",
+    " - Github & Collaboration: https://classroom.udacity.com/courses/ud456\n",
+    " - Optimize Your Github: https://classroom.udacity.com/courses/ud247"
+   ]
   }
  ],
  "metadata": {
