Went through all videos, still have some posts to check through, almost done

--- a/Git_and_Github.ipynb
+++ b/Git_and_Github.ipynb
@@ -66,7 +66,8 @@
     " - For different default text editors: https://help.github.com/en/articles/associating-text-editors-with-git\n",
     "\n",
     "Password caching may need to be setup depending on the version of Git you have too. Password caching enables you to send changes to GitHub via the command line without having to type in your password everytime.\n",
-    " - Follow these instructions: https://help.github.com/en/articles/caching-your-github-password-in-git"
+    " - Follow these instructions: https://help.github.com/en/articles/caching-your-github-password-in-git\n",
+    " - For SSH connection: https://help.github.com/en/articles/connecting-to-github-with-ssh"
    ]
   },
   {
@@ -116,45 +117,47 @@
    "metadata": {},
    "source": [
     " - GitBash Information\n",
-    "1. Check current Git version:    git --version\n",
-    "2. Get colored diff output:    git config --global color.ui auto\n",
+    "1. Check current Git version: `git --version`\n",
+    "2. Get colored diff output: `git config --global color.ui auto`\n",
     "\n",
     "\n",
     " - Working Directory/Commits\n",
-    "3. View history: git log (can add a branch name to check that out from current directory too)\n",
-    "4. View visual representation of the commit history: git log --graph --oneline branch_name1 branch_name2 \n",
-    "5. Changes between two versions of a file in log: diff commit_id_1 commit_id_2\n",
-    "6. Files changed in each commit: git log --stat\n",
-    "7. Reset to a previous commit: git checkout commit_id\n",
-    "8. Check files changed since last commit: git status\n",
-    "9. Check a commits parent: git show commit_id (useful after merging branches)\n",
+    "3. View history: `git log` (can add a branch name to check that out from current directory too)\n",
+    "4. View visual representation of the commit history: `git log --graph --oneline branch_name1 branch_name2` \n",
+    "5. Changes between two versions of a file in log: `diff commit_id_1 commit_id_2`\n",
+    "6. Files changed in each commit: `git log --stat`\n",
+    "7. Reset to a previous commit: `git checkout commit_id`\n",
+    "8. Check files changed since last commit: `git status`\n",
+    "9. Check a commits parent: `git show commit_id` (useful after merging branches)\n",
+    "10. Alter most recent commit: `git commit --amend`\n",
+    "11. Revert most recent commit: `git revert commit_id`\n",
     "\n",
     "\n",
     " - Staging Area\n",
-    "10. Add files to Staging Area: git add file_name.txt\n",
-    "11. Commit files from Staging Area: git git commit(this requires a commit message to see what changed)\n",
-    "12. Check changes between Working Directory and Staging Area: git diff (no arguments, if no difference then nothing pops up)\n",
-    "13. Check changes between Staging Area and Repository: git diff --staged (if no difference then nothing pops up)\n",
-    "14. Discard changes in Working Directory or Staging Area: git reset --hard (this is NOT REVERSIBLE since the changes have never been committed in the Working Directory or Staging Area)\n",
+    "12. Add files to Staging Area: `git add file_name.txt`\n",
+    "13. Commit files from Staging Area: `git git commit`(this requires a commit message to see what changed)\n",
+    "14. Check changes between Working Directory and Staging Area: `git diff` (no arguments, if no difference then nothing pops up)\n",
+    "15. Check changes between Staging Area and Repository: `git diff --staged` (if no difference then nothing pops up)\n",
+    "16. Discard changes in Working Directory or Staging Area: `git reset --hard` (this is NOT REVERSIBLE since the changes have never been committed in the Working Directory or Staging Area)\n",
     "\n",
     "\n",
     " - Branches\n",
-    "15. Create new branch: git branch branch_name\n",
-    "16. Check branches: git branch\n",
-    "17. Switch branches: git checkout branch_name\n",
-    "18. Create & switch to new branch: got checkout -b branch_name\n",
-    "20. Delete a branch: git branch -d branch_name(only deletes branch label, not commits from it)\n",
+    "17. Create new branch: `git branch branch_name`\n",
+    "18. Check branches: `git branch`\n",
+    "19. Switch branches: `git checkout branch_name`\n",
+    "20. Create & switch to new branch: `git checkout -b branch_name`\n",
+    "21. Delete a branch: `git branch -d branch_name` (only deletes branch label, not commits from it)\n",
     "\n",
     "\n",
     " - Repositories\n",
-    "21. Clone a repository: git clone github_url_of_repository(make sure you're in the directory you want to clone this to)\n",
-    "22. Create/Initialize a repository: git init(running \"ls -la\" should show a \".git\" directory has been created)\n",
-    "23. Create a remote(repository): git remote add origin URL_of_github_link (standard name for 1 remote is origin, the name origin is the name used within the local repository to refer to the remote repository on Github)\n",
-    "24. Check remotes: got remote -v (check remotes created and shows URL where data is fetched/pushed, these will be the same in most cases)\n",
-    "25. Send changes to remote: git push origin master (master is the branch being pushed from local to remote)\n",
-    "26. Pull/Grab changes from remote: git pull origin master (master is the branch being pulled from the remote)\n",
-    "27. Update only local copy of remote branch: git fetch origin (leaves actual local version alone, this is good when different changes have been made to the remote and local copy of the remote branches)\n",
-    "28. Merge remote and local copy of remote: git merge master origin/master (a conflict is expected from this to be checked)"
+    "22. Clone a repository: `git clone github_url_of_repository` (make sure you're in the directory you want to clone this to)\n",
+    "23. Create/Initialize a repository: `git init` (running \"ls -la\" should show a \".git\" directory has been created)\n",
+    "24. Create a remote(repository): `git remote add origin URL_of_github_link` (standard name for 1 remote is origin, the name origin is the name used within the local repository to refer to the remote repository on Github)\n",
+    "25. Check remotes: `git remote -v` (check remotes created and shows URL where data is fetched/pushed, these will be the same in most cases)\n",
+    "26. Send changes to remote: `git push origin master` (master is the branch being pushed from local to remote)\n",
+    "27. Pull/Grab changes from remote: `git pull origin master` (master is the branch being pulled from the remote)\n",
+    "28. Update only local copy of remote branch: `git fetch origin` (leaves actual local version alone, this is good when different changes have been made to the remote and local copy of the remote branches)\n",
+    "29. Merge remote and local copy of remote: `git merge master origin/master` (a conflict is expected from this to be checked)"
    ]
   },
   {
@@ -192,7 +195,12 @@
    "source": [
     " - Github Cheetsheet: https://github.com/github/training-kit/blob/master/downloads/github-git-cheat-sheet.pdf\n",
     " - Diagram Tools: https://www.gliffy.com/, https://yuml.me/diagram/activity/draw\n",
-    " - BitBucket: https://bitbucket.org/product, https://confluence.atlassian.com/bitbucket/tutorials-755338051.html (a Git hosting service that gives you unlimited private repositories for free!)"
+    " - BitBucket: https://bitbucket.org/product, https://confluence.atlassian.com/bitbucket/tutorials-755338051.html (a Git hosting service that gives you unlimited private repositories for free!)\n",
+    " - Markdown Guide: https://help.github.com/en/articles/getting-started-with-writing-and-formatting-on-github\n",
+    " - Markdown Differences in Github: https://help.github.com/en/categories/writing-on-github\n",
+    " - Markdown Previewer: https://dillinger.io/\n",
+    " - Markdown Preview with Sublime: https://packagecontrol.io/packages/GitHub%20Flavored%20Markdown%20Preview\n",
+    " - OpenSource Projects List: https://up-for-grabs.net/#/ "
    ]
   },
   {
@@ -206,7 +214,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " - Make sure to follow the message format for whatever project you're working on specifies!"
+    " - Make sure to follow the message format for whatever project you're working on specifies!\n",
+    " - Writing README's: https://github.com/udacity/ud777-writing-readmes"
    ]
   },
   {
@@ -225,7 +234,23 @@
     " - How to Use Git and Github: https://classroom.udacity.com/courses/ud775\n",
     " - Github & Collaboration: https://classroom.udacity.com/courses/ud456\n",
     " - Optimize Your Github: https://classroom.udacity.com/courses/ud247\n",
-    " - Git Commit Message Style Guide: https://classroom.udacity.com/courses/ud247"
+    " - Git Commit Message Style Guide: https://classroom.udacity.com/courses/ud247\n",
+    " - Writing READMEs: https://classroom.udacity.com/courses/ud777\n",
+    " - Git Book: https://git-scm.com/about"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## License"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By default you retain full rights to your code even if you don't include a license, but it's better to be explicit about this for good practices, it's also important to include if you want others to contribute to your code: https://choosealicense.com/"
    ]
   }
  ],
