Fixing some type-o's and updating the README

--- a/Git_and_Github.ipynb
+++ b/Git_and_Github.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Git & Github Info"
+    "# Git & Github Information"
    ]
   },
   {
@@ -83,26 +83,37 @@
    "source": [
     "**TIPS**\n",
     " - *Use short lines:* Many command line tools, including Git, are less useful if your files contain very long lines. For example, if you use diff to compare two files that have all their content on the same line, diff will only show you that the two files are different. It will not be able to pinpoint the location of the difference for you. For this reason, it is a good idea to make sure you keep your lines reasonably short when writing your plain-text files. The exact limit is a matter of personal preference but many developers use a max line length of 80 to 120 characters. Some editors can automatically insert line breaks for you, but for others, like Sublime, you will need to remember to press enter when you want to create a new line.\n",
-    " \n\n",
+    " \n",
+    "\n",
     " - *How Often to Commit?* A good rule of thumb is to make one commit per logical change. For example, if you fixed a typo, then fixed a bug in a separate part of the file, you should use one commit for each change since they are logically separate. \n",
-    " \n\n",
+    " \n",
+    "\n",
     " - *Multiple Versions of Code/Project:* Branches allow for divergence from the main original and main piece of code being worked on. If you want to experiment with something in the code or create an alternate version of it without effecting the original/main version, then cerating a branch makes the most sense. If the experiment or other versions turn out well and you want to add them to be part of the original/main code then you can merge them together.\n",
-    "\n\n",
+    "\n",
+    "\n",
     "**REMINDERS**\n",
     " - *What is a Repository?* A collection of multiple files being worked on. When making a commit(a snapshot of all the files in the repository at the time of the commit), a version of every file in the repository is saved.\n",
-    " \n\n",
-    " - *Git checkout:* This is used to reset all files to the time the chosen commit was made. This is useful if a bug was found and you're not sure which commit introduced it.\n\n",
-    " \n\n",
+    " \n",
+    "\n",
+    " - *Git checkout:* This is used to reset all files to the time the chosen commit was made. This is useful if a bug was found and you're not sure which commit introduced it.\n",
+    "\n",
+    " \n",
+    "\n",
     " - *Staging area:* There are 3 areas when working with Git, the Working Directory(where you're currently working and the all the files in this directory), which goes to the Staging Area(intermediate area where files may be added one at a time and then when commit is run it will only commit the files in this area) which leads to the Repository(where the files from the staging area are committed). The command \"git status\" can be used to check current files in working directory(under \"Untracked files\") and to check which files are in the staging area(under \"Changes to be committed\"). The main/original/offical version of the code is referred to as the Master branch, other versions have their own branch names that are not Master. The Master branch is created automatically every time a new repository is created and it acts as the current branch being worked on upon creation.\n",
-    " \n\n",
+    " \n",
+    "\n",
     " - *Branches:* Good to use with different/experimental versions of the official(Master) branch version. Can checkout other branches not created by yourself, the message: \"Branch branch_name set up to track remote branch branch_name from origin.\" This just means that you didn't create this branch yourself since this is a \"remote\" branch.\n",
-    " \n\n",
+    " \n",
+    "\n",
     " - *Git Merge:* git merge will also include the currently checked-out branch in the merged version. So if you have branch_name1 checked out, and you run: git merge branch_name2 branch_name3, the merged version will combine branch_name1,branch_name2, and branch_name3(that’s because the branch_name1 label will update after you make the merge commit). For this reason, you should always checkout one of the two branches you’re planning on merging before doing the merge.If you want to merge branch_name2 into branch_name1, you can simply: git checkout branch_name1 ,then: git merge branch_name2.\n",
-    " \n\n",
+    " \n",
+    "\n",
     " - *Merge Conflicts:* It's possible to update the local copy of the remote while leaving the local version alone with git fetch, this is a good idea so that then git log and git diff can be used to see what changes were made on on the local and remote repositories(good if the remote is being updated and you're working on something else in the mean time). To combine the local and local copy of the remote we can now git merge(git pull is equivalent to doing git fetch then git merge). The message \"Your branch and 'origin/master' have diverged, and have...\" is expected when the local and local copy of the remote are present and different.\n",
-    " \n\n",
+    " \n",
+    "\n",
     " - *Forking:* Can only be done on Github. Makes a copy of someone else's repository on your Github profile which can now be cloned and modified on your system. No need to set up a remote here since one is automatically set up when one is cloned. A conflict can emerge if making a pull request from your fork but someone makes a change to the original repository, if this happens then another remote needs to be added to include changes from the original repository, this remote is usually named \"upstream.\" The steps are: add upstream(original) remote in clone -> pull master from upstream -> merge master into change branch(local) -> push change branch into fork(will automatically update pull request). \n",
-    " \n\n",
+    " \n",
+    "\n",
     " - *Pull Requests:* Good way to get feedback before updating the Master branch(remember this is called a pull request but it's an attempt to merge/push into a branch, it's called pull since you're requesting that your branch be pulled into another). This is done by making a change locally on a different branch(create a new one if needed) -> push that change to the fork(on the new/different branch being used, so git push origin different_branch_name) -> make a pull request(done on Github, by default Github assumes you want to merge changes into original repository but you may just want to merge into the master branch of your own fork, so make sure to edit this). Now on Github you can see two branches exists. Now pushing this new branch with any new commits will automatically update the pull request."
    ]
   },
