fixed some typo's

--- a/Git_and_Github.ipynb
+++ b/Git_and_Github.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "Since I'm using a Windows machine I'll have to download and install Git to use it. You can get the download from here: https://gitforwindows.org/\n",
-    " - Walking through the installation I leave evrything check and additionally check \"Additional Icons\" to have a desktop shortcut included.\n",
+    " - Walking through the installation I leave everything checked and check \"Additional Icons\" to have a desktop shortcut included.\n",
     " - I keep Vim as the default text editor since it's already the default editor of Git for Windows and it's the editor I have the most experience with.\n",
     " - I leave \"Git from command line and also from 3rd-party software\" checked because I don't want to override my Windows tools.\n",
     " - OpenSSL library for certs if fine to use.\n",
