fixed formatting a little

--- a/Git_and_Github.ipynb
+++ b/Git_and_Github.ipynb
@@ -52,15 +52,15 @@
     "It's also recommended that we download a simple text editor so I'll go with Sublime 3 at the time of this writting. \n",
     " - Download Sublime 3 from here: http://www.sublimetext.com/3\n",
     " - In GitBash make sure sublime_text.exe is in /Program Files\n",
-    " - Give sublime_text.exe and alias to easily open it from anywhere: echo 'alias sublime=\"C:/Program\\ Files/Sublime\\ Text\\ 3/sublime_text.exe\"' >> ~/.bashrc\n",
+    " - Give sublime_text.exe and alias to easily open it from anywhere: `echo 'alias sublime=\"C:/Program\\ Files/Sublime\\ Text\\ 3/sublime_text.exe\"' >> ~/.bashrc`\n",
     " - If it doesn't work then more info is here: https://www.udacity.com/wiki/ud775/sublime\n",
     " - Done\n",
-    " - *REMINDER:* Create a sublime file in GitBash with: sublime file_name_here.txt \n",
+    " - *REMINDER:* Create a sublime file in GitBash with: `sublime file_name_here.txt` \n",
     " \n",
     "In the latest versions of git autocompletion is readily available, if your working on a system which doesn't have this, then you can enable it following these steps:\n",
     " - Download the script for Git autocompletion here(click save as and download): https://raw.githubusercontent.com/git/git/master/contrib/completion/git-completion.bash\n",
-    " - After this download in Git Bash move to the home directory(starting place upon opening Git Bash) or move there with: cd ~\n",
-    " - Once there move the downloaded file from above to the current directory and rename it to end in just \".bash\", not \".bash.txt\" which is the name given to it from the download, do this with the command: mv Downloads/git-completion.bash.txt git-completion.bash\n",
+    " - After this download in Git Bash move to the home directory(starting place upon opening Git Bash) or move there with: `cd ~`\n",
+    " - Once there move the downloaded file from above to the current directory and rename it to end in just \".bash\", not \".bash.txt\" which is the name given to it from the download, do this with the command: `mv Downloads/git-completion.bash.txt git-completion.bash`\n",
     " - Follow the same steps for this: https://raw.githubusercontent.com/git/git/master/contrib/completion/git-prompt.sh (this file should be named \"git-prompt.sh\")\n",
     " - For furthur bash customization visit: https://www.cyberciti.biz/tips/howto-linux-unix-bash-shell-setup-prompt.html\n",
     " - For different default text editors: https://help.github.com/en/articles/associating-text-editors-with-git\n",
