--- a/Git_and_Github.ipynb
+++ b/Git_and_Github.ipynb
@@ -99,13 +99,13 @@
     "\n",
     " \n",
     "\n",
-    " - *Staging area:* There are 3 areas when working with Git, the Working Directory(where you're currently working and the all the files in this directory), which goes to the Staging Area(intermediate area where files may be added one at a time and then when commit is run it will only commit the files in this area) which leads to the Repository(where the files from the staging area are committed). The command \"git status\" can be used to check current files in working directory(under \"Untracked files\") and to check which files are in the staging area(under \"Changes to be committed\"). The main/original/offical version of the code is referred to as the Master branch, other versions have their own branch names that are not Master. The Master branch is created automatically every time a new repository is created and it acts as the current branch being worked on upon creation.\n",
+    " - *Staging area:* There are 3 areas when working with Git, the Working Directory(where you're currently working and the all the files in this directory), which goes to the Staging Area(intermediate area where files may be added one at a time and then when commit is run it will only commit the files in this area) which leads to the Repository(where the files from the staging area are committed). The command `git status` can be used to check current files in working directory(under \"Untracked files\") and to check which files are in the staging area(under \"Changes to be committed\"). The main/original/offical version of the code is referred to as the Master branch, other versions have their own branch names that are not Master. The Master branch is created automatically every time a new repository is created and it acts as the current branch being worked on upon creation.\n",
     " \n",
     "\n",
     " - *Branches:* Good to use with different/experimental versions of the official(Master) branch version. Can checkout other branches not created by yourself, the message: \"Branch branch_name set up to track remote branch branch_name from origin.\" This just means that you didn't create this branch yourself since this is a \"remote\" branch.\n",
     " \n",
     "\n",
-    " - *Git Merge:* git merge will also include the currently checked-out branch in the merged version. So if you have branch_name1 checked out, and you run: git merge branch_name2 branch_name3, the merged version will combine branch_name1,branch_name2, and branch_name3(that’s because the branch_name1 label will update after you make the merge commit). For this reason, you should always checkout one of the two branches you’re planning on merging before doing the merge.If you want to merge branch_name2 into branch_name1, you can simply: git checkout branch_name1 ,then: git merge branch_name2.\n",
+    " - *Git Merge:* `git merge` will also include the currently checked-out branch in the merged version. So if you have branch_name1 checked out, and you run: `git merge branch_name2 branch_name3` , the merged version will combine branch_name1,branch_name2, and branch_name3(that’s because the branch_name1 label will update after you make the merge commit). For this reason, you should always checkout one of the two branches you’re planning on merging before doing the merge.If you want to merge branch_name2 into branch_name1, you can simply: `git checkout branch_name1` ,then: `git merge branch_name2` .\n",
     " \n",
     "\n",
     " - *Merge Conflicts:* It's possible to update the local copy of the remote while leaving the local version alone with git fetch, this is a good idea so that then git log and git diff can be used to see what changes were made on on the local and remote repositories(good if the remote is being updated and you're working on something else in the mean time). To combine the local and local copy of the remote we can now git merge(git pull is equivalent to doing git fetch then git merge). The message \"Your branch and 'origin/master' have diverged, and have...\" is expected when the local and local copy of the remote are present and different.\n",
@@ -147,7 +147,7 @@
     "\n",
     " - Staging Area\n",
     "12. Add files to Staging Area: `git add file_name.txt`\n",
-    "13. Commit files from Staging Area: `git git commit`(this requires a commit message to see what changed)\n",
+    "13. Commit files from Staging Area: `git commit`(this requires a commit message to see what changed)\n",
     "14. Check changes between Working Directory and Staging Area: `git diff` (no arguments, if no difference then nothing pops up)\n",
     "15. Check changes between Staging Area and Repository: `git diff --staged` (if no difference then nothing pops up)\n",
     "16. Discard changes in Working Directory or Staging Area: `git reset --hard` (this is NOT REVERSIBLE since the changes have never been committed in the Working Directory or Staging Area)\n",
