fixed some more typo's

--- a/Git_and_Github.ipynb
+++ b/Git_and_Github.ipynb
@@ -49,7 +49,7 @@
    "source": [
     "Now that we have GitBash we can use all the commands regularly used in \\*nix systems.\n",
     "\n",
-    "It's also recommended that we download a simple text editor so I'll go with Sublime 3 at the time of this writting. \n",
+    "It's also recommended to download a simple text editor, I'll go with Sublime 3 at the time of this writting. \n",
     " - Download Sublime 3 from here: http://www.sublimetext.com/3\n",
     " - In GitBash make sure sublime_text.exe is in /Program Files\n",
     " - Give sublime_text.exe and alias to easily open it from anywhere: `echo 'alias sublime=\"C:/Program\\ Files/Sublime\\ Text\\ 3/sublime_text.exe\"' >> ~/.bashrc`\n",
@@ -57,10 +57,10 @@
     " - Done\n",
     " - *REMINDER:* Create a sublime file in GitBash with: `sublime file_name_here.txt` \n",
     " \n",
-    "In the latest versions of git autocompletion is readily available, if your working on a system which doesn't have this, then you can enable it following these steps:\n",
+    "In the latest versions of Git, autocompletion is readily available, if you're working on a system which doesn't have this then you can enable it following these steps:\n",
     " - Download the script for Git autocompletion here(click save as and download): https://raw.githubusercontent.com/git/git/master/contrib/completion/git-completion.bash\n",
-    " - After this download in Git Bash move to the home directory(starting place upon opening Git Bash) or move there with: `cd ~`\n",
-    " - Once there move the downloaded file from above to the current directory and rename it to end in just \".bash\", not \".bash.txt\" which is the name given to it from the download, do this with the command: `mv Downloads/git-completion.bash.txt git-completion.bash`\n",
+    " - After this download, in Git Bash move to the home directory(starting place upon opening Git Bash) or move there with: `cd ~`\n",
+    " - Once there, move the downloaded file from above to the current directory and rename it to end in just \".bash\", not \".bash.txt\" which is the name given to it from the download; do this with the command: `mv Downloads/git-completion.bash.txt git-completion.bash`\n",
     " - Follow the same steps for this: https://raw.githubusercontent.com/git/git/master/contrib/completion/git-prompt.sh (this file should be named \"git-prompt.sh\")\n",
     " - For furthur bash customization visit: https://www.cyberciti.biz/tips/howto-linux-unix-bash-shell-setup-prompt.html\n",
     " - For different default text editors: https://help.github.com/en/articles/associating-text-editors-with-git\n",
@@ -88,7 +88,7 @@
     " - *How Often to Commit?* A good rule of thumb is to make one commit per logical change. For example, if you fixed a typo, then fixed a bug in a separate part of the file, you should use one commit for each change since they are logically separate. \n",
     " \n",
     "\n",
-    " - *Multiple Versions of Code/Project:* Branches allow for divergence from the main original and main piece of code being worked on. If you want to experiment with something in the code or create an alternate version of it without effecting the original/main version, then cerating a branch makes the most sense. If the experiment or other versions turn out well and you want to add them to be part of the original/main code then you can merge them together.\n",
+    " - *Multiple Versions of Code/Project:* Branches allow for divergence from the main original and main piece of code being worked on. If you want to experiment with something in the code or create an alternate version of it without effecting the original/main version, then creating a branch makes the most sense. If the experiment or other versions turn out well and you want to add them to be part of the original/main code then you can merge them together.\n",
     "\n",
     "\n",
     "**REMINDERS**\n",
@@ -102,13 +102,13 @@
     " - *Staging area:* There are 3 areas when working with Git, the Working Directory(where you're currently working and the all the files in this directory), which goes to the Staging Area(intermediate area where files may be added one at a time and then when commit is run it will only commit the files in this area) which leads to the Repository(where the files from the staging area are committed). The command `git status` can be used to check current files in working directory(under \"Untracked files\") and to check which files are in the staging area(under \"Changes to be committed\"). The main/original/offical version of the code is referred to as the Master branch, other versions have their own branch names that are not Master. The Master branch is created automatically every time a new repository is created and it acts as the current branch being worked on upon creation.\n",
     " \n",
     "\n",
-    " - *Branches:* Good to use with different/experimental versions of the official(Master) branch version. Can checkout other branches not created by yourself, the message: \"Branch branch_name set up to track remote branch branch_name from origin.\" This just means that you didn't create this branch yourself since this is a \"remote\" branch.\n",
+    " - *Branches:* Use with different/experimental versions of the official(Master) branch version. Can checkout other branches not created by yourself, the message: \"Branch branch_name set up to track remote branch branch_name from origin.\" This just means that you didn't create this branch yourself since this is a \"remote\" branch.\n",
     " \n",
     "\n",
     " - *Git Merge:* `git merge` will also include the currently checked-out branch in the merged version. So if you have branch_name1 checked out, and you run: `git merge branch_name2 branch_name3` , the merged version will combine branch_name1,branch_name2, and branch_name3(that’s because the branch_name1 label will update after you make the merge commit). For this reason, you should always checkout one of the two branches you’re planning on merging before doing the merge.If you want to merge branch_name2 into branch_name1, you can simply: `git checkout branch_name1` ,then: `git merge branch_name2` .\n",
     " \n",
     "\n",
-    " - *Merge Conflicts:* It's possible to update the local copy of the remote while leaving the local version alone with git fetch, this is a good idea so that then git log and git diff can be used to see what changes were made on on the local and remote repositories(good if the remote is being updated and you're working on something else in the mean time). To combine the local and local copy of the remote we can now git merge(git pull is equivalent to doing git fetch then git merge). The message \"Your branch and 'origin/master' have diverged, and have...\" is expected when the local and local copy of the remote are present and different.\n",
+    " - *Merge Conflicts:* It's possible to update the local copy of the remote while leaving the local version alone with `git fetch`, this is a good idea so that then `git log` and `git diff` can be used to see what changes were made on on the local and remote repositories(good if the remote is being updated and you're working on something else in the mean time). To combine the local and local copy of the remote we can now `git merge` (`git pull` is equivalent to doing `git fetch` then `git merge`). The message \"Your branch and 'origin/master' have diverged, and have...\" is expected when the local and local copy of the remote are present and different.\n",
     " \n",
     "\n",
     " - *Forking:* Can only be done on Github. Makes a copy of someone else's repository on your Github profile which can now be cloned and modified on your system. No need to set up a remote here since one is automatically set up when one is cloned. A conflict can emerge if making a pull request from your fork but someone makes a change to the original repository, if this happens then another remote needs to be added to include changes from the original repository, this remote is usually named \"upstream.\" The steps are: add upstream(original) remote in clone -> pull master from upstream -> merge master into change branch(local) -> push change branch into fork(will automatically update pull request). \n",
