--- a/Git_and_Github.ipynb
+++ b/Git_and_Github.ipynb
@@ -134,42 +134,44 @@
     "\n",
     "\n",
     " - Working Directory/Commits\n",
-    "3. View history: `git log` (can add a branch name to check that out from current directory too)\n",
-    "4. View visual representation of the commit history: `git log --graph --oneline branch_name1 branch_name2` \n",
-    "5. Changes between two versions of a file in log: `diff commit_id_1 commit_id_2`\n",
-    "6. Files changed in each commit: `git log --stat`\n",
-    "7. Reset to a previous commit: `git checkout commit_id`\n",
-    "8. Check files changed since last commit: `git status`\n",
-    "9. Check a commits parent: `git show commit_id` (useful after merging branches)\n",
-    "10. Alter most recent commit: `git commit --amend`\n",
-    "11. Revert most recent commit: `git revert commit_id`\n",
+    "3. Commit your work: `git commit` (commits work to current branch)\n",
+    "4. Commit your work without opening Vim: `git commit -m \"Message Goes Here\"` (commits work to current branch)\n",
+    "5. View history: `git log` (can add a branch name to check that out from current directory too)\n",
+    "6. View visual representation of the commit history: `git log --graph --oneline branch_name1 branch_name2` \n",
+    "7. Changes between two versions of a file in log: `diff commit_id_1 commit_id_2`\n",
+    "8. Files changed in each commit: `git log --stat`\n",
+    "9. Reset to a previous commit: `git checkout commit_id`\n",
+    "10. Check files changed since last commit: `git status`\n",
+    "11. Check a commits parent: `git show commit_id` (useful after merging branches)\n",
+    "12. Alter most recent commit: `git commit --amend`\n",
+    "13. Revert most recent commit: `git revert commit_id`\n",
     "\n",
     "\n",
     " - Staging Area\n",
-    "12. Add files to Staging Area: `git add file_name.txt`\n",
-    "13. Commit files from Staging Area: `git commit`(this requires a commit message to see what changed)\n",
-    "14. Check changes between Working Directory and Staging Area: `git diff` (no arguments, if no difference then nothing pops up)\n",
-    "15. Check changes between Staging Area and Repository: `git diff --staged` (if no difference then nothing pops up)\n",
-    "16. Discard changes in Working Directory or Staging Area: `git reset --hard` (this is NOT REVERSIBLE since the changes have never been committed in the Working Directory or Staging Area)\n",
+    "14. Add files to Staging Area: `git add file_name.txt`\n",
+    "15. Commit files from Staging Area: `git commit`(this requires a commit message to see what changed)\n",
+    "16. Check changes between Working Directory and Staging Area: `git diff` (no arguments, if no difference then nothing pops up)\n",
+    "17. Check changes between Staging Area and Repository: `git diff --staged` (if no difference then nothing pops up)\n",
+    "18. Discard changes in Working Directory or Staging Area: `git reset --hard` (this is NOT REVERSIBLE since the changes have never been committed in the Working Directory or Staging Area)\n",
     "\n",
     "\n",
     " - Branches\n",
-    "17. Create new branch: `git branch branch_name`\n",
-    "18. Check branches: `git branch`\n",
-    "19. Switch branches: `git checkout branch_name`\n",
-    "20. Create & switch to new branch: `git checkout -b branch_name`\n",
-    "21. Delete a branch: `git branch -d branch_name` (only deletes branch label, not commits from it)\n",
+    "19. Create new branch: `git branch branch_name`\n",
+    "20. Check branches: `git branch`\n",
+    "21. Switch branches: `git checkout branch_name`\n",
+    "22. Create & switch to new branch: `git checkout -b branch_name`\n",
+    "23. Delete a branch: `git branch -d branch_name` (only deletes branch label, not commits from it)\n",
     "\n",
     "\n",
     " - Repositories\n",
-    "22. Clone a repository: `git clone github_url_of_repository` (make sure you're in the directory you want to clone this to)\n",
-    "23. Create/Initialize a repository: `git init` (running \"ls -la\" should show a \".git\" directory has been created)\n",
-    "24. Create a remote(repository): `git remote add origin URL_of_github_link` (standard name for 1 remote is origin, the name origin is the name used within the local repository to refer to the remote repository on Github)\n",
-    "25. Check remotes: `git remote -v` (check remotes created and shows URL where data is fetched/pushed, these will be the same in most cases)\n",
-    "26. Send changes to remote: `git push origin master` (master is the branch being pushed from local to remote)\n",
-    "27. Pull/Grab changes from remote: `git pull origin master` (master is the branch being pulled from the remote)\n",
-    "28. Update only local copy of remote branch: `git fetch origin` (leaves actual local version alone, this is good when different changes have been made to the remote and local copy of the remote branches)\n",
-    "29. Merge remote and local copy of remote: `git merge master origin/master` (a conflict is expected from this to be checked)"
+    "24. Clone a repository: `git clone github_url_of_repository` (make sure you're in the directory you want to clone this to)\n",
+    "25. Create/Initialize a repository: `git init` (running \"ls -la\" should show a \".git\" directory has been created)\n",
+    "26. Create a remote(repository): `git remote add origin URL_of_github_link` (standard name for 1 remote is origin, the name origin is the name used within the local repository to refer to the remote repository on Github)\n",
+    "27. Check remotes: `git remote -v` (check remotes created and shows URL where data is fetched/pushed, these will be the same in most cases)\n",
+    "28. Send changes to remote: `git push origin master` (master is the branch being pushed from local to remote)\n",
+    "29. Pull/Grab changes from remote: `git pull origin master` (master is the branch being pulled from the remote)\n",
+    "30. Update only local copy of remote branch: `git fetch origin` (leaves actual local version alone, this is good when different changes have been made to the remote and local copy of the remote branches)\n",
+    "31. Merge remote and local copy of remote: `git merge master origin/master` (a conflict is expected from this to be checked)"
    ]
   },
   {
